Con tipos y proveedores en el create andando